# django-first-test

./: pyproject.toml
Django_Project/: manage.py
Django_Project/Django_Project/: asgi.py  settings.py  urls.py  wsgi.py
Django_Project/first_app/: models.py  urls.py  views.py
Django_Project/first_app/migrations/: 0001_initial.py
Django_Project/first_app/templates/: base.html  home.html  todos.html
